--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,9 @@ dependencies {
     // dagger hilt
     implementation "com.google.dagger:hilt-android:2.41"
     kapt "com.google.dagger:hilt-compiler:2.41"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+
+    implementation("io.coil-kt:coil-compose:2.1.0")
+
 }
